swh.deposit.templates.layout: Fix image's alternative text
Related T915

--- a/swh/deposit/templates/layout.html
+++ b/swh/deposit/templates/layout.html
@@ -30,7 +30,7 @@
       <div class="navbar-header">
         <div class="logo">
           <a class="navbar-brand" href="{% url 'home' %}"> <!-- logo -->
-            <img alt="SWH Archive" src="{% static 'img/swh-logo-deposit.png' %}" class="swh-logo" />
+            <img alt="SWH Deposit" src="{% static 'img/swh-logo-deposit.png' %}" class="swh-logo" />
           </a>
           <a class="navbar-brand sitename" href="{% url 'home' %}">
             <span class="first-word">Software</span> <span class="second-word">Heritage</span>
