--- a/swh/deposit/templates/homepage.html
+++ b/swh/deposit/templates/homepage.html
@@ -21,8 +21,9 @@ This is <a href="https://www.softwareheritage.org">Software Heritage</a>'s
 <a href="http://swordapp.github.io/SWORDv2-Profile/SWORDProfile.html">SWORD
 2.0</a> Server implementation.
 
-**S.W.O.R.D** (**S**imple **W**eb-Service **O**ffering **R**epository
-**D**eposit) is an interoperability standard for digital file deposit.
+<strong>S.W.O.R.D</strong> (<strong>S</strong>imple <strong>W</strong>eb-Service <strong>O</strong>ffering <strong>R</strong>epository
+<strong>D</strong>eposit) is an interoperability standard for digital
+file deposit.
 
 This implementation will permit interaction between a client (a
 repository, e.g. hal) and a server
