homepage: Improve sentence phrasing

--- a/swh/deposit/templates/homepage.html
+++ b/swh/deposit/templates/homepage.html
@@ -25,12 +25,9 @@ This is <a href="https://www.softwareheritage.org">Software Heritage</a>'s
 <strong>D</strong>eposit) is an interoperability standard for digital
 file deposit.
 
-This implementation will permit interaction between a client (a
-repository, e.g. hal) and a server
-(<a href="https://archive.softwareheritage.org">SWH repository</a>) to
-permit deposits of software source code archives with associated
-metadata.
-
+This implementation allows a client (a repository, e.g. hal) to deposit
+software source archives and its associated metadata to the (<a
+href="https://archive.softwareheritage.org">SWH archive</a>).
 
 <h2>Documentation</h2>
 
