homepage: Fix broken link

--- a/swh/deposit/templates/homepage.html
+++ b/swh/deposit/templates/homepage.html
@@ -34,7 +34,7 @@ href="https://archive.softwareheritage.org">SWH archive</a>).
 <p>
   <ul>
     <li><a href="https://docs.softwareheritage.org/devel/swh-deposit">Index</a></li>
-    <li><a href="https://docs.softwareheritage.org/devel/swh-deposit/getting-started.html">Getting Started</a></li>
+    <li><a href="https://docs.softwareheritage.org/devel/swh-deposit/user-manual.html">User Manual</a></li>
     <li><a href="https://docs.softwareheritage.org/devel/swh-deposit/spec-api.html">Specification</a></li>
   </ul>
 </p>
