homepage: Adapt page links

--- a/swh/deposit/templates/homepage.html
+++ b/swh/deposit/templates/homepage.html
@@ -34,8 +34,8 @@ href="https://archive.softwareheritage.org">SWH archive</a>).
 <p>
   <ul>
     <li><a href="https://docs.softwareheritage.org/devel/swh-deposit">Index</a></li>
-    <li><a href="https://docs.softwareheritage.org/devel/swh-deposit/user-manual.html">User Manual</a></li>
-    <li><a href="https://docs.softwareheritage.org/devel/swh-deposit/spec-api.html">Specification</a></li>
+    <li><a href="https://docs.softwareheritage.org/devel/swh-deposit/api/user-manual.html#deposit-user-manual">User Manual</a></li>
+    <li><a href="https://docs.softwareheritage.org/devel/swh-deposit/api/api-documentation.html#deposit-api-specifications">Specification</a></li>
   </ul>
 </p>
 
